# pa1-refactored

./: Dockerfile.file  Dockerfile.search  docker-compose.yml  pyproject.toml
agents/file_agent/: main.py  requirements.txt
agents/search_agent/: main.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
src/: app.py
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
